--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             </section>
         </div><!--Fin div izquierdo-->
     </div>
-    <footer><p>Pie de pagina</p></footer>
+    <footer><p>Pie de pagina</p></footer><!--Fin footer-->
 </body>
 </html>
